--- a/JavaStudy/3-2/smartStyle.css
+++ b/JavaStudy/3-2/smartStyle.css
@@ -1,17 +1,24 @@
-@media screen and (min-width: 767px) {
-}
-
 @media screen and (max-width: 767px) {
-   
-
-    .header{
+   .header{
         width: 300px;
    }
+
+    .main{
+        width: 300px;
+    }
 
    .left{
         width: 100px;
     }
 
+    .right{
+        width: 200px;
+    }
+
+    .top{
+    width:200px;    
+    }
+    
     .top-left{
         width: 125px;
     }
@@ -53,6 +60,12 @@
         float: none;
     }
 
+    .top-right{
+        width: 150px;
+        height: 100px;
+        float: none;
+      }
+
     .top-left1{
         width: 150px;
 
@@ -64,11 +77,7 @@
         float: none;
     }
 
-    .top-right{
-        width: 150px;
-        height: 100px;
-        float: none;
-      }
+    
 
     .under{
         width: 150px;
