--- a/JavaStudy/3-2/style2.css
+++ b/JavaStudy/3-2/style2.css
@@ -45,7 +45,7 @@ background-color: #141f40;
     width: 100px;
     height: 150px;
     background-color: #ff9e6b;
-    float:left;
+    float:right;
 }
 
 .under{
